--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^4.29.3",
+    "@types/react-speech-recognition": "^3.9.5",
     "antd": "^5.12.7",
     "axios": "^1.3.5",
     "i18next": "^23.7.14",
